# ClaudeCodeRemote

./: .gitattributes  .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml
claude_code_remote/hub/: api.py  auth.py  db.py  forwarder.py  main.py  oauth.py  passkey.py  tunnel.py  ws_forwarder.py
claude_code_remote/mcp/: ask_user_server.py
claude_code_remote/server/: api.py  auth.py  claude_process.py  config.py  db.py  hub_client.py  main.py  permission_gateway.py  session_manager.py  tool_lazy.py  ws.py
claude_code_remote/shared/: tunnel_proto.py
deploy/: Dockerfile.hub  README.md  ccr-hub.service.example  ccr.service.example  deploy.sh  docker-compose.hub.yml  env.example  hub-env.example  nginx-hub.conf.example
deploy/local-app/: Dockerfile  README.md  docker-compose.yml
docs/: hook-calls.jsonl  m7-https.md  mcp-calls.jsonl  stream-json-events.md  stream-json-raw.jsonl
scripts/: askuser_real_cli_bench.py  hook_bridge.py  hook_permission_probe.py  import_claude_session.py  mcp_permission_probe.py  probe_stream_json.py  test_askuser.py
server/: api.py  claude_process.py  config.py  db.py  main.py  permission_gateway.py  session_manager.py  tool_lazy.py  ws.py
server/static/: app.js  index.html  manifest.webmanifest  style.css  sw.js
tests/: README.md  conftest.py  helpers.py  requirements-test.txt  seed_from_live.py
tests/e2e/: test_active_count.py  test_active_sort_hysteresis.py  test_active_ts_ticker.py  test_browse_empty_and_settings_swipe.py  test_browse_modal_fixed_size.py  test_card_hover_on_touch.py  test_card_text_selection.py  test_chat_head_pinned.py  test_chat_input_draft.py  test_chat_input_enter_behavior.py  test_chat_interrupt_inline.py  test_chat_links_new_tab.py  test_chat_log_padding_matches_head.py  test_chat_menu.py  test_chat_scroll_restore.py  test_chat_scroll_stick.py  test_code_block_copy.py  test_corner_pixels.py  test_corner_report.py  test_cross_session_activation_bug.py  test_directory_modal.py  test_empty_text_bubble.py  test_enter_chat_latency.py  test_home.py  test_home_top_icons.py  test_home_top_sticky.py  test_idb_cache_outbox.py  test_initial_card_autofill.py  test_la_no_bump_on_open.py  test_load_earlier_history.py  test_login.py  test_menu_open_blocks_card_nav.py  test_model_effort_visibility.py  test_new_app_prompt.py  (+34 more)
(+28 files in other folders)
